[package]
name = "chord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.18.0"
thruster = { version = "1.1.10", features = ["hyper_server"] }
tokio = { version = "1.6.1", features = ["full"] }
log = "0.4"
env_logger = "0.7.1"
futures = "0.3"
hyper = { version = "0.14.8", optional = true, features = ["http1", "http2", "runtime", "server", "stream"] }
rouille = "3.4.0"