[package]
name = "chord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.18.0"
rouille = "3.4.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }

[[bin]]
name = "servers"
path = "src/server.rs"
